[package]
name = "pictex"
version = "0.1.0"
edition = "2024"
description = "CLI utility for converting LaTeX math expressions to PNG format"
categories = ["command-line-utilities", "mathematics"]
keywords = ["latex", "tex", "math"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/marcxalexandre/pictex.git"

[dependencies]
which = "8.0.0"
rand = "0.10.0"
clap = { version = "4.5.40", features = ["derive"] }
